# trep_puppet_demo

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  me495_setup.md  package.xml
include/: kbhit.h
launch/: puppet_sim.launch  puppet_sim_view.rviz  puppet_sim_view.vcg  puppet_skeleton_control.launch  puppet_skeleton_control.vcg  puppet_skeleton_control_front_view.vcg  puppet_view.rviz  puppet_view.vcg  puppet_vis.launch
src/: class_testing.py  frame_mappings.py  interactive_marker_controls.py  keyboard_interface.cpp  marker_path.py  puppet_definitions.py  puppet_simulator.py  puppets_modified.py  skeleton_interface.py
urdf/: manual_puppet.urdf  puppet_xacro.py
