<package>
  <name>trep_puppet_demo</name>
  <version>1.0.0</version>
  <description>trep_puppet_demo use trep to simulate a marionette, and use the Kinect to
     control it!</description>
  <maintainer email="schultzjarvis@jarvis.com">Jarvis Schultz</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jarvis Schultz</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>skeletonmsgs_nu</build_depend>
  <build_depend>skeletontracker_nu</build_depend>
  <build_depend>common_rosdeps</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>skeletonmsgs_nu</run_depend>
  <run_depend>skeletontracker_nu</run_depend>
  <run_depend>common_rosdeps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>interactive_markers</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>skeletonmsgs_nu</test_depend> -->
  <!-- <test_depend>skeletontracker_nu</test_depend> -->
  <!-- <test_depend>common_rosdeps</test_depend> -->

</package>
